test_programs/compile_failure/noirc_frontend_tests_uses_self_type_in_trait_where_clause/src/main.nr

    pub trait Trait {
        fn trait_func(self) -> bool;
    }

    pub trait Foo where Self: Trait {
        fn foo(self) -> bool {
            self.trait_func()
        }
    }

    struct Bar {}

    impl Foo for Bar {

    }

    fn main() {
        let _ = Bar {}; // silence Bar never constructed warning
    }
    